test/sema/assign-undefined-to-non-member-in-init.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct A {
    var i: int;

    init() {
        var j = 0;
        // CHECK: [[@LINE+1]]:11: error: 'undefined' is only allowed as an initial value
        j = undefined;
    }
}
